# ChessEngine

./: .gitignore  .travis.yml  CMakeLists.txt  ChessEngine.cbp  README.md
include/: bitmanip.h  bitscan.h  board.h  cpu.h  genmoves.h
include/x86/: arch.h
include/x86/gas/: assembly.h
src/: board.c  genmoves.c  main.c
src/x86/: bitmanip.c  bitmanip_64.S  bitmanip_64.asm  bitmanip_i386.S  bitmanip_i386.asm  bitscan.c  cpu.c
src/x86/i386/: bitscan_intrin.S
src/x86/x86_64/: bitscan_intrin.S
test/: test_board.c  test_suite.h  tests_main.c
tests/: test_intrin.c  test_suite.h  tests_main.c
